testsuite/poke.pkl/eq-functions-diag-1.pk
/* { dg-do compile } */

var a =
  openproc ==
  "foo"; /* { dg-error "invalid operand.*\n.*expected function" } */
